# AyCmakeTemplate-Binary

./: CMakeLists.txt  README.md  README_CN.md
cmake/: Init.cmake  Utils.cmake
include/aybin/: ay_multiply.h
main/: CMakeLists.txt  main.cc
src/: ay_multiply.cc
